# ug3-electrode-viewer

./: CMakeLists.txt
Source/: OpenEphysLib.cpp  UG3ElectrodeDisplay.cpp  UG3ElectrodeDisplay.h  UG3ElectrodeViewer.cpp  UG3ElectrodeViewer.h  UG3ElectrodeViewerCanvas.cpp  UG3ElectrodeViewerCanvas.h  UG3ElectrodeViewerEditor.cpp  UG3ElectrodeViewerEditor.h  UG3ElectrodeViewerToolbar.cpp  UG3ElectrodeViewerToolbar.h
Tests/: UG3ElectrodeViewerTests.cpp
ug3-electrode-viewer/Source/: ColourScheme.h  ElectrodeMap.h  OpenEphysLib.cpp  UG3ElectrodeDisplay.cpp  UG3ElectrodeDisplay.h  UG3ElectrodeViewerEditor.h  UG3ElectrodeViewerToolbar.h
ug3-electrode-viewer/Tests/: UG3ElectrodeViewerTests.cpp
